RESOLVED FIXED40386
REGRESSION (r60247): Google Reader contains the tops of pieces of unidentifiable text under feed headlines
https://bugs.webkit.org/show_bug.cgi?id=40386
Summary REGRESSION (r60247): Google Reader contains the tops of pieces of unidentifia...
kahnyl
Reported 2010-06-09 13:06:12 PDT
Created attachment 58286 [details] Screenshot of issue As seen in the attached sceenshot Google Reader appears to contain the tops of random pieces of text below story headlines. The black shapes remain when the story is opened. This started occuring within the last month of Nightly Builds. The problem didn't present itself in Safari 4 but does in Safari 5. Thanks for reading.
Attachments
Screenshot of issue (97.37 KB, image/png)
2010-06-09 13:06 PDT, kahnyl
no flags
Account for coordinate flippedness (28.58 KB, patch)
2010-06-15 23:47 PDT, mitz
ap: review+
Alexey Proskuryakov
Comment 1 2010-06-09 15:11:01 PDT
mitz
Comment 2 2010-06-10 00:50:40 PDT
It appears to be the top of the second line of the "snippet" span.
mitz
Comment 3 2010-06-15 23:47:43 PDT
Created attachment 58855 [details] Account for coordinate flippedness
mitz
Comment 4 2010-06-16 01:20:54 PDT
Adam Barth
Comment 5 2010-06-16 02:00:55 PDT
Tiger doesn't compile after this change: CompileC /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/i386/SimpleFontDataMac.o /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebCore/platform/graphics/mac/SimpleFontDataMac.mm normal i386 objective-c++ com.apple.compilers.gcc.4_0 cd /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebCore /usr/bin/gcc-4.0 -x objective-c++ -arch i386 -pipe -Wno-trigraphs -fno-exceptions -fno-rtti -fobjc-exceptions -fpascal-strings -fasm-blocks -O2 -Werror -Wnon-virtual-dtor -Wnewline-eof -DNDEBUG -DENABLE_BLOB_SLICE -DENABLE_CHANNEL_MESSAGING -DENABLE_CLIENT_BASED_GEOLOCATION -DENABLE_DATABASE -DENABLE_DATALIST -DENABLE_DOM_STORAGE -DENABLE_EVENTSOURCE -DENABLE_FILTERS -DENABLE_FILE_READER -DENABLE_GEOLOCATION -DENABLE_ICONDATABASE -DENABLE_JAVASCRIPT_DEBUGGER -DENABLE_METER_TAG -DENABLE_OFFLINE_WEB_APPLICATIONS -DENABLE_PROGRESS_TAG -DENABLE_RUBY -DENABLE_SANDBOX -DENABLE_SHARED_WORKERS -DENABLE_SVG -DENABLE_SVG_ANIMATION -DENABLE_SVG_AS_IMAGE -DENABLE_SVG_DOM_OBJC_BINDINGS -DENABLE_SVG_FONTS -DENABLE_SVG_FOREIGN_OBJECT -DENABLE_SVG_USE -DENABLE_VIDEO -DENABLE_WEB_SOCKETS -DENABLE_WORKERS -DENABLE_XPATH -DENABLE_XSLT -DWEBKIT_VERSION_MIN_REQUIRED=WEBKIT_VERSION_LATEST -fmessage-length=0 -fobjc-direct-dispatch -fvisibility-inlines-hidden -fobjc-call-cxx-cdtors -fno-threadsafe-statics -mmacosx-version-min=10.4 -gdwarf-2 -I/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/WebCore.build/Release/WebCore.build/WebCore.hmap -Wall -Wextra -Wcast-align -Wcast-qual -Wchar-subscripts -Wextra-tokens -Wformat=2 -Winit-self -Wmissing-format-attribute -Wmissing-noreturn -Wpacked -Wpointer-arith -Wredundant-decls -Wundef -Wwrite-strings -Wshorten-64-to-32 -F/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/Release -F/System/Library/Frameworks/Carbon.framework/Frameworks -F/System/Library/Frameworks/ApplicationServices.framework/Frameworks -I/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/Release/include -IForwardingHeaders -Iicu -I/usr/include/libxslt -I/usr/include/libxml2 -I/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/Release/WebCoreSQLite3 -I/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/Release/DerivedSources/WebCore -I/Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/WebCore.build/Release/WebCore.build/DerivedSources -include /Library/Caches/com.apple.Xcode.501/SharedPrecompiledHeaders/WebCorePrefix-fgqmkzoyxygftbatrevwvrwxhmqd/WebCorePrefix.h -c /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebCore/platform/graphics/mac/SimpleFontDataMac.mm -o /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/i386/SimpleFontDataMac.o /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebCore/platform/graphics/mac/SimpleFontDataMac.mm: In member function 'WebCore::FloatRect WebCore::SimpleFontData::platformBoundsForGlyph(WebCore::Glyph) const': /Volumes/Data/WebKit-BuildSlave/tiger-intel-release/build/WebCore/platform/graphics/mac/SimpleFontDataMac.mm:429: error: conversion from 'NSRect' to non-scalar type 'CGRect' requested ** BUILD FAILED **
Note You need to log in before you can comment on or make changes to this bug.