WebCore: <rdar://problem/8077119> REGRESSION (r60247): Google Reader contains the tops of pieces of unidentifiable text under feed headlines. https://bugs.webkit.org/show_bug.cgi?id=40386

Reviewed by Alexey Proskuryakov.

Test: platform/mac/fast/text/x-height.html

The result of platformBoundsForGlyph() is in flipped coordinates, whereas the result of
-[NSFont boundingRectForGlyph:] was not. r60247 failed to account for this.

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformInit): Measure the height of the x glyph above the baseline
correctly.
(WebCore::SimpleFontData::platformBoundsForGlyph): Return a rect in flipped coordinates on Tiger
as well.

LayoutTests: <rdar://problem/8077119> REGRESSION: Google Reader contains the tops of pieces of unidentifiable text under feed headlines.
https://bugs.webkit.org/show_bug.cgi?id=40386

Reviewed by Alexey Proskuryakov.

* platform/mac/fast/text/x-height-expected.checksum: Added.
* platform/mac/fast/text/x-height-expected.png: Added.
* platform/mac/fast/text/x-height-expected.txt: Added.
* platform/mac/fast/text/x-height.html: Added.



Canonical link: https://commits.webkit.org/52251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61241 268f45cc-cd09-0410-ab3c-d52691b4dbfc